feat(cli): sync Dreamina v1.4.16 and v1.4.17 contracts