@@ -42,7 +42,7 @@ public final class MockDreaminaCli {
         Path log = root.resolve("invocations.log");
         Path media = root.resolve("media");
         Files.createDirectories(media);
-        Files.writeString(script, buildScript(log), StandardCharsets.UTF_8);
+        Files.write(script, buildScript(log).getBytes(StandardCharsets.UTF_8));
         makeExecutable(script);
         return new MockDreaminaCli(script, log, media);
     }
@@ -79,7 +79,7 @@ public final class MockDreaminaCli {
      */
     public List<String> invocations() throws IOException {
         if (!Files.exists(logPath)) {
-            return List.of();
+            return java.util.Arrays.asList();
         }
         return Files.readAllLines(logPath, StandardCharsets.UTF_8);
     }
@@ -107,123 +107,7 @@ public final class MockDreaminaCli {
 
     private static String buildScript(Path logPath) {
         String log = logPath.toAbsolutePath().toString().replace("'", "'\\''");
-        return """
-            #!/usr/bin/env bash
-            set -euo pipefail
-            LOG='%s'
-            printf '%%s\\n' "$*" >> "$LOG"
-            cmd="${1:-}"
-            shift || true
-
-            case "$cmd" in
-              help)
-                echo "Usage: dreamina help [flags]"
-                ;;
-              version)
-                echo '{"version":"c58a6a2-dirty","commit":"c58a6a2","build_time":"2026-05-07T09:52:59Z"}'
-                ;;
-              user_credit)
-                echo '{"total_credit":4388,"user_id":1552973852847448,"user_name":"","vip_level":"maestro"}'
-                ;;
-              login)
-                sub="${1:-}"
-                if [ "$sub" = "checklogin" ]; then
-                  :
-                elif printf '%%s' "$*" | grep -q -- '--headless'; then
-                  if printf '%%s' "$*" | grep -q -- '--mock-device-flow'; then
-                    echo '{"verification_uri":"https://mock/login","user_code":"MOCK","device_code":"dev-mock"}'
-                  else
-                    echo '已复用当前本地 OAuth 登录态。'
-                  fi
-                else
-                  cat <<'EOF'
-已复用当前本地 OAuth 登录态。
-当前登录账户信息：
-user_id: 1552973852847448
-vip_level: maestro
-total_credit: 4391
-EOF
-                fi
-                ;;
-              logout)
-                echo '已清除本地登录态。'
-                ;;
-              relogin)
-                cat <<'EOF'
-请使用浏览器完成 OAuth Device Flow 登录。
-verification_uri: https://jimeng.jianying.com/ai-tool/cli-auth
-user_code: 88d38543ef407cb0a01a61088ec0d32c
-device_code: 662eef8f79b0ee3c20d7222c5ec28ed3
-poll_interval: 1s
-expires_at: 2026-05-26T05:38:58Z
-EOF
-                ;;
-              session)
-                sub="${1:-}"
-                shift || true
-                case "$sub" in
-                  create)
-                    echo 'Created session "mock-session" (ID: 10001)'
-                    ;;
-                  list|ls)
-                    cat <<'EOF'
-ID              NAME                        PINNED  UPDATED_AT
---------------  --------------------------  ------  ----------------
-10001           mock-session                No      2026-05-14 10:44
-EOF
-                    ;;
-                  search|find)
-                    cat <<'EOF'
-Found 1 sessions containing "mock":
-ID  NAME          UPDATED_AT
---  ------------  ----------------
-10001 mock-session 2026-05-14 10:44
-EOF
-                    ;;
-                  rename|update)
-                    echo 'Renamed session 10001 to "mock-renamed"'
-                    ;;
-                  delete|rm)
-                    echo 'deleted'
-                    ;;
-                  "")
-                    cat <<'EOF'
-Usage:
-  dreamina session [flags]
-
-Manage Dreamina sessions (create, list, search, rename, delete).
-EOF
-                    ;;
-                  *)
-                    echo "session sub=$sub"
-                    ;;
-                esac
-                ;;
-              list_task)
-                echo '[{"submit_id":"mock-submit-1","gen_task_type":"text2image","gen_status":"success","fail_reason":"","result_json":{"images":[{"width":1024,"height":1024}],"videos":[]},"commerce_info":{"credit_count":0,"triplet":{"resource_type":"","resource_id":"","benefit_type":""},"triplets":[{"resource_type":"aigc","resource_id":"generate_img","benefit_type":"image_uhd_4k"}]}}]'
-                ;;
-              query_result)
-                echo '{"submit_id":"mock-submit-1","gen_status":"success","credit_count":3,"result_json":{"images":[{"image_url":"https://mock/img.png","width":2048,"height":2048}],"videos":[]},"queue_info":{"queue_idx":0,"priority":1,"queue_status":"Finish","queue_length":0}}'
-                ;;
-              text2image|text2video|image2image|image_upscale|image2video|frames2video|multiframe2video|multimodal2video)
-                echo '{"submit_id":"mock-gen-1","logid":"202605260533251720170000026033C60","gen_status":"querying","credit_count":3}'
-                ;;
-              __exit_nonzero)
-                echo 'fail' >&2
-                exit 7
-                ;;
-              __exit_one)
-                exit 1
-                ;;
-              __sleep_forever)
-                sleep 60
-                ;;
-              *)
-                echo "unknown cmd=$cmd" >&2
-                exit 2
-                ;;
-            esac
-            """.formatted(log).stripLeading();
+        return String.format("#!/usr/bin/env bash\n            set -euo pipefail\n            LOG='%s'\n            printf '%%s\\n' \"$*\" >> \"$LOG\"\n            cmd=\"${1:-}\"\n            shift || true\n\n            case \"$cmd\" in\n              help)\n                echo \"Usage: dreamina help [flags]\"\n                ;;\n              version)\n                echo '{\"version\":\"c58a6a2-dirty\",\"commit\":\"c58a6a2\",\"build_time\":\"2026-05-07T09:52:59Z\"}'\n                ;;\n              user_credit)\n                echo '{\"total_credit\":4388,\"user_id\":1552973852847448,\"user_name\":\"\",\"vip_level\":\"maestro\"}'\n                ;;\n              login)\n                sub=\"${1:-}\"\n                if [ \"$sub\" = \"checklogin\" ]; then\n                  :\n                elif printf '%%s' \"$*\" | grep -q -- '--headless'; then\n                  if printf '%%s' \"$*\" | grep -q -- '--mock-device-flow'; then\n                    echo '{\"verification_uri\":\"https://mock/login\",\"user_code\":\"MOCK\",\"device_code\":\"dev-mock\"}'\n                  else\n                    echo '已复用当前本地 OAuth 登录态。'\n                  fi\n                else\n                  cat <<'EOF'\n已复用当前本地 OAuth 登录态。\n当前登录账户信息：\nuser_id: 1552973852847448\nvip_level: maestro\ntotal_credit: 4391\nEOF\n                fi\n                ;;\n              logout)\n                echo '已清除本地登录态。'\n                ;;\n              relogin)\n                cat <<'EOF'\n请使用浏览器完成 OAuth Device Flow 登录。\nverification_uri: https://jimeng.jianying.com/ai-tool/cli-auth\nuser_code: 88d38543ef407cb0a01a61088ec0d32c\ndevice_code: 662eef8f79b0ee3c20d7222c5ec28ed3\npoll_interval: 1s\nexpires_at: 2026-05-26T05:38:58Z\nEOF\n                ;;\n              session)\n                sub=\"${1:-}\"\n                shift || true\n                case \"$sub\" in\n                  create)\n                    echo 'Created session \"mock-session\" (ID: 10001)'\n                    ;;\n                  list|ls)\n                    cat <<'EOF'\nID              NAME                        PINNED  UPDATED_AT\n--------------  --------------------------  ------  ----------------\n10001           mock-session                No      2026-05-14 10:44\nEOF\n                    ;;\n                  search|find)\n                    cat <<'EOF'\nFound 1 sessions containing \"mock\":\nID  NAME          UPDATED_AT\n--  ------------  ----------------\n10001 mock-session 2026-05-14 10:44\nEOF\n                    ;;\n                  rename|update)\n                    echo 'Renamed session 10001 to \"mock-renamed\"'\n                    ;;\n                  delete|rm)\n                    echo 'deleted'\n                    ;;\n                  \"\")\n                    cat <<'EOF'\nUsage:\n  dreamina session [flags]\n\nManage Dreamina sessions (create, list, search, rename, delete).\nEOF\n                    ;;\n                  *)\n                    echo \"session sub=$sub\"\n                    ;;\n                esac\n                ;;\n              list_task)\n                echo '[{\"submit_id\":\"mock-submit-1\",\"gen_task_type\":\"text2image\",\"gen_status\":\"success\",\"fail_reason\":\"\",\"result_json\":{\"images\":[{\"width\":1024,\"height\":1024}],\"videos\":[]},\"commerce_info\":{\"credit_count\":0,\"triplet\":{\"resource_type\":\"\",\"resource_id\":\"\",\"benefit_type\":\"\"},\"triplets\":[{\"resource_type\":\"aigc\",\"resource_id\":\"generate_img\",\"benefit_type\":\"image_uhd_4k\"}]}}]'\n                ;;\n              query_result)\n                echo '{\"submit_id\":\"mock-submit-1\",\"gen_status\":\"success\",\"credit_count\":3,\"result_json\":{\"images\":[{\"image_url\":\"https://mock/img.png\",\"width\":2048,\"height\":2048}],\"videos\":[]},\"queue_info\":{\"queue_idx\":0,\"priority\":1,\"queue_status\":\"Finish\",\"queue_length\":0}}'\n                ;;\n              text2image|text2video|image2image|image_upscale|image2video|frames2video|multiframe2video|multimodal2video)\n                echo '{\"submit_id\":\"mock-gen-1\",\"logid\":\"202605260533251720170000026033C60\",\"gen_status\":\"querying\",\"credit_count\":3}'\n                ;;\n              __exit_nonzero)\n                echo 'fail' >&2\n                exit 7\n                ;;\n              __exit_one)\n                exit 1\n                ;;\n              __sleep_forever)\n                sleep 60\n                ;;\n              *)\n                echo \"unknown cmd=$cmd\" >&2\n                exit 2\n                ;;\n            esac\n", log);
     }
 
     private static void makeExecutable(Path script) throws IOException {
